# OpenAI_WebUI

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  OAIWUI_GPT.py  OAIWUI_GPT_WebUI.py  OAIWUI_Images.py  OAIWUI_Images_WebUI.py  OAIWUI_WebUI.py  OpenAI_DallE.py  OpenAI_DallE_WUI.py  OpenAI_GPT.py  OpenAI_GPT_WUI.py  OpenAI_WebUI.py  README.md  common_functions.py  common_functions_WUI.py  common_functions_WebUI.py  config.sh  entrypoint.sh  list_models.py  litellm_helper.py  models.json  models.md  models.txt  ollama_helper.py  prompt_presets_settings-example.json  pyproject.toml  requirements.txt
assets/: OpenAI_WebUI.xml
prompt_presets.example/: shakespeare.json
unraid/: Dockerfile  OpenAI_WebUI.xml
