[project]
name = "Infotrend-OpenAI_WebUI"
version = "0.9.11"
description = "Streamlit-based WebUI to OpenAI's ChatGPT and Dall-E's API (requires an OpenAI API key) as well as Perplexity API (requires a Perplexity API key)"
authors = [
    {name = "Martial Michel", email = "mmichel@infotrend.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Infotrend-Inc/OpenAI_WebUI"
requires-python = ">=3.10,<4.0"
dependencies = [
    "openai==1.60.1",
    "streamlit>=1.39.0",
    "extra-streamlit-components>=0.1.71",
    "streamlit-extras>=0.4.7",
    "streamlit_image_select>=0.6.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.4.0",
    "watchdog>=5.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
