[project]
name = "Infotrend-OpenAI_WebUI"
version = "0.9.11"
description = "Streamlit-based WebUI to OpenAI API-compatible GPTs and Image generation APIs (requires API keys)"
authors = [
    {name = "Martial Michel", email = "mmichel@infotrend.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Infotrend-Inc/OpenAI_WebUI"
requires-python = ">=3.10,<4.0"
dependencies = [
    "openai==1.77.0",
    "streamlit>=1.45.0",
    "extra-streamlit-components>=0.1.80",
    "streamlit-extras>=0.7.1",
    "streamlit_image_select>=0.6.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.4.0",
    "watchdog>=5.0.0"
]
